# services/task/routes.go
@@ -30,8 +30,36 @@ func NewHandler(store types.TaskStore) *Handler {
 	return handler
 }
 
-// Returns tasks
+// HandleGetTasks   get-tasks
+// @Summary      Get Tasks
+// @Description  Get Tasks
+// @Tags         Task
+// @Produce      json
+// @Success      200  {object} 	types.Task
+// @Param status query string false "Task Status" Enums(pending, in_progress, completed)
+// @Failure      400  {object}  types.ErrorResponse
+// @Failure      500  {object}  types.ErrorResponse
+// @Router       /task [get]
 func (h *Handler) handleGetTasks(w http.ResponseWriter, r *http.Request) {
+	statusStr := r.URL.Query().Get("status")
+
+	if statusStr != "" {
+		status := types.TaskStatus(statusStr)
+		switch status {
+		case types.StatusPending, types.StatusInProgress, types.StatusCompleted:
+			tasks, err := h.store.GetTasksByStatus(status)
+			if err != nil {
+				utils.WriteError(w, http.StatusInternalServerError, err)
+				return
+			}
+			utils.WriteJSON(w, http.StatusOK, tasks)
+			return
+		default:
+			utils.WriteError(w, http.StatusBadRequest, fmt.Errorf("invalid task status, should be one of pending, in_progress, completed"))
+			return
+		}
+	}
+
 	tasks, err := h.store.GetTasks()
 	if err != nil {
 		utils.WriteError(w, http.StatusInternalServerError, err)
@@ -40,6 +68,51 @@ func (h *Handler) handleGetTasks(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusOK, tasks)
 }
 
+// HandleGetTask   Get Task by ID
+// @Summary      Get Task by ID
+// @Description  Get Task by ID
+// @Tags         Task
+// @Accept       json
+// @Produce      json
+// @Param        id    path      int      true      "Task ID"
+// @Success      200  {object} 	string
+// @Failure      400  {object}  types.ErrorResponse
+// @Failure      500  {object}  types.ErrorResponse
+// @Router       /task/{id} [get]
+func (h *Handler) handleGetTask(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	taskIDStr, ok := vars["id"]
+	if !ok {
+		utils.WriteError(w, http.StatusBadRequest, fmt.Errorf("task ID is missing in URL"))
+		return
+	}
+
+	taskID, err := strconv.Atoi(taskIDStr)
+	if err != nil {
+		utils.WriteError(w, http.StatusBadRequest, fmt.Errorf("invalid task ID"))
+		return
+	}
+
+	task, err := h.store.GetTaskByID(taskID)
+	if err != nil {
+		utils.WriteError(w, http.StatusBadRequest, err)
+		return
+	}
+
+	utils.WriteJSON(w, http.StatusOK, task)
+}
+
+// HandleCreateTask   create-task
+// @Summary      Create task
+// @Description  Create Task
+// @Tags         Task
+// @Accept       json
+// @Produce      json
+// @Param        CreateTaskPayload      body      types.CreateTaskPayload      true      "create task"
+// @Success      201  {object} 	string
+// @Failure      400  {object}  types.ErrorResponse
+// @Failure      500  {object}  types.ErrorResponse
+// @Router       /task [post]
 func (h *Handler) handleCreateTask(w http.ResponseWriter, r *http.Request) {
 	var payload types.CreateTaskPayload
 	err := utils.ParseJSON(r, &payload)
@@ -73,7 +146,17 @@ func (h *Handler) handleCreateTask(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusCreated, map[string]string{"message": "User created successfully"})
 }
 
-// needs a valid task id
+// HandleUpdateTask   update-task
+// @Summary      Update Task
+// @Description  Update Task
+// @Tags         Task
+// @Accept       json
+// @Produce      json
+// @Param        id    path      int      true      "Task ID"
+// @Success      200  {object} 	string
+// @Failure      400  {object}  types.ErrorResponse
+// @Failure      500  {object}  types.ErrorResponse
+// @Router       /task/{id} [put]
 func (h *Handler) handleUpdateTask(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	taskIDStr, ok := vars["id"]
@@ -112,7 +195,17 @@ func (h *Handler) handleUpdateTask(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusOK, map[string]string{"message": "Task updated successfully"})
 }
 
-// needs a valid task id
+// HandleDeleteTask   delete-task
+// @Summary      Delete Task
+// @Description  Delete Task
+// @Tags         Task
+// @Accept       json
+// @Produce      json
+// @Param        id    path      int      true      "Task ID"
+// @Success      200  {object} 	string
+// @Failure      400  {object}  types.ErrorResponse
+// @Failure      500  {object}  types.ErrorResponse
+// @Router       /task/{id} [delete]
 func (h *Handler) handleDeleteTask(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	taskIDStr, ok := vars["id"]
@@ -142,7 +235,17 @@ func (h *Handler) handleDeleteTask(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusOK, map[string]string{"message": "Task deleted successfully"})
 }
 
-// Progress task between stages, utilizes mutex to prevent concurrent progress thus race condition
+// HandleProgressTask   progress-task
+// @Summary      Progress Task
+// @Description  Progress Task one further between stages, utilizes mutex to prevent concurrent progress
+// @Tags         Task
+// @Accept       json
+// @Produce      json
+// @Param        id    path      int      true      "Task ID"
+// @Success      200  {object} 	string
+// @Failure      400  {object}  types.ErrorResponse
+// @Failure      500  {object}  types.ErrorResponse
+// @Router       /task/{id} [patch]
 func (h *Handler) handleProgressTask(w http.ResponseWriter, r *http.Request) {
 	locked := h.mu.TryLock()
 	if locked {
@@ -179,7 +282,16 @@ func (h *Handler) handleProgressTask(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusOK, map[string]string{"message": fmt.Sprintf("Task %d progressed successfully", taskID)})
 }
 
-// Handle Currency demo to demonstrate queued processing
+// HandleConcurrency   concurrency-demo
+// @Summary      Concurrency Demo
+// @Description  Endpoint to demonstrate queued processing, Check logs for processing status and prometheus metrics in `api/v1/metrics` for queue length and tasks processed
+// @Tags         Task
+// @Accept       json
+// @Produce      json
+// @Success      200  {object} 	string
+// @Failure      400  {object}  types.ErrorResponse
+// @Failure      500  {object}  types.ErrorResponse
+// @Router       /concurrency [post]
 func (h *Handler) handleConcurrencyDemo(w http.ResponseWriter, r *http.Request) {
 	for i := 1; i <= 4; i++ {
 		// add queued task to prometheus
